# eth-lez-atomic-swaps

./: .gitignore  Cargo.toml  Makefile  README.md  delivery-dogfooding.md  scaffold.toml
.cursor/rules/: basecamp.mdc  commit-style.mdc  lez-framework-template.mdc  lez-template.mdc  lgs-cli.mdc
docs/: dogfooding-issue-tracker.md  dogfooding-issue-triage.md  lez-events-evaluation.md  scaffold-phase-1-validation.md  scaffold-upgrade-plan.md  scaffold-upstream-tracker.md
docs/dogfooding-evidence/2026-05-19/B1/: README.md  proxy-log-excerpt.txt
docs/dogfooding-evidence/2026-05-19/B2/: README.md  transcript-b2a-lgpm.txt  transcript-b2b-basecamp.txt
docs/dogfooding-evidence/2026-05-19/B5/: README.md  cachix-probe-x86_64-darwin.txt  cachix-probe-x86_64-linux.txt  cachix-probe.txt  nix-build-dryrun.txt  nix-config.txt
programs/lez-htlc/methods/guest/: Cargo.toml
programs/lez-htlc/methods/guest/src/: lib.rs  main.rs
src/lez/: client.rs
swap-module/: flake.nix  metadata.json
swap-module/src/: swap_delivery_adapter.cpp  swap_delivery_adapter.h  swap_impl.cpp  swap_impl.h
swap-module/tests/: test_swap.cpp
swap-ui/src/: swap_ui.rep  swap_ui_plugin.cpp  swap_ui_plugin.h
swap-ui/src/qml/: AtomicSwapView.qml  ConfigPanel.qml  Main.qml  MakerView.qml  ProgressStepper.qml  RefundView.qml  ResultCard.qml  TakerView.qml
swap-ui/src/qml/SwapTheme/: qmldir
swap-ui/tests/: smoke.mjs
tests/: lez_integration.rs
